Fix images aligning

--- a/server/hedley/themes/custom/porto/css/drupal-styles.css
+++ b/server/hedley/themes/custom/porto/css/drupal-styles.css
@@ -156,7 +156,7 @@
 .content img {
 	max-width: 100%;
 	height: auto; 
-	display: block;
+	display: inline-block;
 }
 
 .home-concept .process-image img {
